--- a/src/components/styles/Watched.scss
+++ b/src/components/styles/Watched.scss
@@ -26,7 +26,8 @@
 
   &__img-div {
     width: 100%;
-    height: 25rem;
+    height: 100%;
+    min-height: 25rem;
   }
 
   &__img {
