--- a/src/components/styles/Watchlist.scss
+++ b/src/components/styles/Watchlist.scss
@@ -27,6 +27,7 @@
   &__img-div {
     width: 100%;
     height: 100%;
+    min-height: 25rem;
   }
 
   &__img {
